<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/cardColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="04dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="08dp"
        android:backgroundTint="@color/cardColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/myCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                >
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginEnd="15dp"
                   android:orientation="vertical">

                   <com.google.android.material.imageview.ShapeableImageView
                       android:id="@+id/foodImage"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:maxWidth="110dp"
                       android:minWidth="130dp"
                       android:minHeight="100dp"
                       android:maxHeight="130dp"
                       android:adjustViewBounds="true"
                       android:scaleType="fitCenter"
                       android:contentDescription="@string/foodImage"
                       android:src="@drawable/download5"
                       app:shapeAppearanceOverlay="@style/rectangular"

                       />
               </LinearLayout>

              <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/foodName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/food_name"
                                android:textAlignment="textStart"
                                android:textColor="#000"
                                android:layout_marginTop="-5dp"
                                android:minWidth="130dp"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                />
                            <FrameLayout
                                android:layout_marginLeft="80dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/shareBtn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    app:drawableStartCompat="@drawable/ic_share" />
                            </FrameLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="05dp"
                            android:orientation="horizontal">

                            <RatingBar
                                android:id="@+id/foodRatingBar"
                                style="?android:attr/ratingBarStyleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="5"
                                android:rating="3.5" />
                            <TextView
                                android:id="@+id/foodRatingValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_3_0"
                                android:textStyle="bold"
                                android:layout_marginStart="38dp"
                                />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="05dp"
                            >

                            <TextView
                                android:id="@+id/time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_1_hour"
                                android:textColor="@color/lightBlack"
                                android:textStyle="bold"
                                android:minWidth="80dp"
                                android:maxWidth="100dp"
                                />

                            <TextView
                                android:id="@+id/placeHolder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/placeHolder"
                                android:textAlignment="center"
                                android:textColor="@color/lightBlack"
                                android:textSize="20sp"
                                android:textStyle="bold"
                                android:layout_marginStart="35dp"
                                />

                            <TextView
                                android:id="@+id/difficulty"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/difficulty"
                                android:textColor="@color/lightBlack"
                                android:textStyle="bold"
                                android:layout_marginStart="18dp"
                                />
                </LinearLayout>

            </LinearLayout>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>